<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tvDetailRecipeName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:maxLines="2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/tvDetailCreatedAtTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="4dp"-->
<!--        android:text="@string/tv_detail_created_at"-->
<!--        android:textSize="10sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/tvDetailCreatedAt"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvDetailCreatedAt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="17dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:textSize="10sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvDetailUpdatedAt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:textSize="10sp"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@id/tvDetailUpdatedAtTitle"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvDetailCreatedAt" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvDetailUpdatedAtTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginEnd="4dp"-->
<!--        android:text="@string/tv_detail_updated_at"-->
<!--        android:textSize="10sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/tvDetailUpdatedAt"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvDetailCreatedAtTitle" />-->

    <LinearLayout
        android:id="@+id/layoutDateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetailRecipeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDetailRecipeName">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvDetailCreatedAtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_detail_created_at"
                android:textSize="10sp"
                android:layout_marginEnd="4dp"/>
            <TextView
                android:id="@+id/tvDetailCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <TextView
                android:id="@+id/tvDetailUpdatedAtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_detail_updated_at"
                android:textSize="10sp"
                android:layout_marginEnd="4dp"/>
            <TextView
                android:id="@+id/tvDetailUpdatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardDetailImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailRecipeName">

        <ImageView
            android:id="@+id/ivDetailImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image" />
    </com.google.android.material.card.MaterialCardView>


    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardDetailImage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDetailCookingTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_detail_cooking_time_title"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailCookingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/tvDetailCookingTimeTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_detail_category_title"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/tvDetailCookingTime"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvDetailCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/tvDetailCategoryTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetailIngredientsTitle"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="#DFDFDF"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:text="@string/tv_detail_ingredients_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailCookingTimeTitle" />

            <TextView
                android:id="@+id/tvDetailIngredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailIngredientsTitle" />

            <TextView
                android:id="@+id/tvDetailRecipeTitle"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="#DFDFDF"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:text="@string/tv_detail_recipe_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailIngredients" />

            <TextView
                android:id="@+id/tvDetailRecipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailRecipeTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>